5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1593_588.log
== TEST (2019-03-28 10:59:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))
notas_R50 = valor // 50
resto_R50 = valor % 50
notas_R10 = resto_R50 // 10
resto_R10 = resto_R50 % 10
notas_R2 = resto_R10 // 2
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- OUTPUT:
19
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:01:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R50 // 50
resto_R50 = resto_R50 % 50
notas_R10 = resto_R50 // 10
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    notas_R50 = resto_R50 // 50
NameError: name 'resto_R50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:02:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(int(notas_R2))
NameError: name 'notas_R2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:02:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:02:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))
notas_R100 = valor // 100
resto_R100 = valor % 100
notas_R50 = resto_R100 // 50
resto_R50 = resto_R100 % 50
notas_R10 = resto_R50 // 10
print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- EXECUTION TIME:
0.165576
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
